...
      categories: ['Historical', 'Adventure'],
      coverColor: Color(0xFFd0c9b7),
      coverImage: 'assets/seaofpoppies.jpg',
      description: 'The first in an epic trilogy, Sea of Poppies is a stunningly vibrant and intensely human work that brings alive the nineteenth-century opium trade.',
      reviews: [
        Review(
          name: 'jokimi',
          review: 'Masterful historical fiction. The research behind this book is impressive.',
          rating: 10.0,
          avatarPath: 'assets/avatar.jpg',
        ),
        Review(
          name: 'iwiwi',
...
